# time-lapse-pi

./: .gitignore  Cargo.toml  build.sh  connectAndKeepAlive.sh  deployRelease.sh  readme.md  stitch.sh  test.sh  time-lapse_readme.md
scripts/: build.sh  check.sh  deployRelease.sh  stitch.sh  test.sh
src/: args.rs  camera.rs  config.rs  gpio.rs  lib.rs  main.rs  number_util.rs
src/gpio/: button.rs  led.rs  light.rs
tests/: time-lapse-pi.rs
