[package]
name = "time-lapse-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
rust_gpiozero = "0.2.1"
tokio = { version = "1", features = ["full"] }

#[profile.release]
#strip = true  # Automatically strip symbols from the binary to make file size smaller.
